Enum, Struct and Union/Difference between C structures and C++ structures
// C Program to Implement Member functions inside structure

#include <stdio.h>
struct marks {
	int num;
	void
	Set(int temp) // Member function inside Structure to
					// take input and store it in "num"
	{
		num = temp;
	}
	void display() // function used to display the values
	{
		printf("%d", num);
	}
};
// Driver Program
int main()
{
	struct marks m1;
	m1.Set(9); // calling function inside Struct to
			// initialize value to num
	m1.display(); // calling function inside struct to
				// display value of Num
}

/* Error Occured
prog.c:18:4: error: ‘struct marks’ has no member named ‘Set’
m1.Set(9); // calling function inside Struct to
initialize value to num
	^
prog.c:19:4: error: ‘struct marks’ has no member named
‘display’ m1.display(); // calling function inside struct to
display value of Num
*/




// C++ Program to Implement Member functions inside
// structure

#include <iostream>
using namespace std;
struct marks {
	int num;
	void
	Set(int temp) // Member function inside Structure to
				// take input and store it in "num"
	{
		num = temp;
	}
	void display() // function used to display the values
	{
		cout << "num=" << num;
	}
};
// Driver Program
int main()
{
	marks m1;
	m1.Set(9); // calling function inside Struct to
			// initialize value to num
	m1.display(); // calling function inside struct to
				// display value of Num
}

// This Code is Contributed by Samyak Jain
